[ADD]:新增修改个人信息功能

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,3 +13,14 @@ body,
   display: flex;
   flex-direction: column;
 }
+.avatar {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+}
+.model {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
